Update Face Detection with CNN.ipynb

--- a/Face Detection with CNN.ipynb
+++ b/Face Detection with CNN.ipynb
@@ -6,13 +6,10 @@
    "source": [
     "## Разработка программы распознавания лица с использованием сверточной нейронной сети (CNN)\n",
     "\n",
-    "По аналогии с форматом Yale Face Database подготовить 10 изображений своего лица.\n",
+    "Была выбрана реализация и обучена сверточная нейронная сеть (CNN) для распознавания лица человека с маскировкой очками, сбежавшего из-под карантина, в случае его попадания в поле зрения наружной видеокамеры с 10 альтернативными лицами (в том числе изображения из Yale Face Database).\n",
     "\n",
-    "Выбрать реализацию и обучить сверточную нейронную сеть (CNN) для распознавания в соответствии с вариантом лица человека с маскировкой очками, сбежавшего из-под карантина, в случае его попадания в поле зрения наружной видеокамеры с 10 альтернативными лицами (в том числе изображения из Yale Face Database).\n",
-    "\n",
-    "Провести эксперимент по распознаванию лиц с визуализацией результатов.\n",
-    "\n",
-    "Попробовать несколько вариантов архитектур CNN. Выбрать лучшую архитектуру как минимум из 2. "
+    "Проведён эксперимент по распознаванию лиц с визуализацией результатов.\n",
+    "\n"
    ]
   },
   {
@@ -23,7 +20,7 @@
    "source": [
     "import cv2\n",
     "#convert image to gray and save it with the same name\n",
-    "imagename = 'faces/train/Olea/sleepy.jpg'\n",
+    "imagename = 'faces/train/sleepy.jpg'\n",
     "# Reading the image\n",
     "img = cv2.imread(imagename,cv2.IMREAD_GRAYSCALE)\n",
     "# Saving the image \n",
